@@ -15,6 +15,7 @@ Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und 
 ## [1.8.13] – 2026-01-27
 ### Added
 - SRU-Exchange-Eingaben für "Exchange Input" und "Exchange Output" ergänzt, die bei SRU-Exchange-Status (inkl. Suffixe) angezeigt werden und als Keywords `{sn_in}` bzw. `{sn_out}` in Ausgaben genutzt werden können.
+- SRU-Exchange-Keywords `{sn_in}` und `{sn_out}` werden nun auch innerhalb der einzelnen Finding-Texte ersetzt (leere Werte bleiben leer).
 
 ## [1.8.12] – 2026-01-26
 ### Fixed
